# BNYC-Desktop-Client

./: .env  .env.example  .gitignore  LICENSE  README.md  create-temp-icons.sh  package.json  快速开始.md  环境配置说明.md
.github/workflows/: build.yml
public/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
