[package]
name = "bnyc-desktop-client"
version = "1.0.2"
description = "BNYC RustDesk定制系统桌面客户端"
authors = ["BNYC Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
dotenvy = "0.15"  # 用于在编译时加载.env文件

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

